@@ -15,6 +15,8 @@
  ** Time of Day
  ** Quest Complete
  ** Spell Cast Count
+ ** Absorbtion shield amount
+ ** Unit Incoming heals
  
  * Bug Fixes:
  ** The IncreasedStats equivalency should now always properly check for the Legacy of the Emperor buff
